# cargo-line-test

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml
fixtures/attr/: Cargo.toml
fixtures/attr/src/: lib.rs
fixtures/my-package/: Cargo.toml
src/: main.rs  opts.rs  progress.rs  range_set.rs  run.rs  util.rs  warn.rs
src/db/: mod.rs  read.rs
tests/: ci.rs  hyphen.rs  proc-macro.rs
