[package]
name = "cargo-line-test"
version = "0.1.1"
authors = ["Samuel Moelius <sam@moeli.us>"]
description = "Run tests by the lines they exercise"
edition = "2021"
license = "AGPL-3.0"
repository = "https://github.com/trailofbits/cargo-line-test"

[dependencies]
anyhow = "1.0"
assert_cmd = "2.0"
cargo_metadata = "0.19"
clap = { version = "4.5", features = ["cargo", "derive", "wrap_help"] }
ctrlc = "3.5"
unidiff = "0.4"
hex = "0.4"
once_cell = "1.21"
lcov = "0.8"
remain = "0.2"
serde_json = "1.0"
sha2 = "0.10"
tempfile = "3.23"

[dev-dependencies]
ctor = "0.5"
regex = "1.12"

[lints.rust.unexpected_cfgs]
level = "deny"
check-cfg = ["cfg(dylint_lib, values(any()))"]

[lints.clippy]
pedantic = { level = "warn", priority = -1 }

[workspace]
exclude = ["fixtures"]

[workspace.metadata.dylint]
libraries = [
    { git = "https://github.com/trailofbits/dylint", pattern = "examples/general" },
    { git = "https://github.com/trailofbits/dylint", pattern = "examples/supplementary" },
    # { git = "https://github.com/trailofbits/dylint", pattern = "examples/restriction/inconsistent_qualification" },
    { git = "https://github.com/trailofbits/dylint", pattern = "examples/restriction/misleading_variable_name" },
]
